--- a/sections/main-404.liquid
+++ b/sections/main-404.liquid
@@ -1,11 +1,11 @@
 <div class="w-full bg-secondary-100 px-54 md:px-72 py-s11 lg:py-s13">
-    <div class="max-w-[635px] mx-auto flex flex-col items-center">
-        <img src="{{ 'sinking-404.png' | asset_url }}" width="635" height="302" loading="lazy"/>
-        <p class="mt-s7 faux-p-lg text-center text-primary-800">
-          SOS! The page you are looking for no longer exists.
-        </p>
-        <a href="{{ routes.all_products_collection_url }}" class="text-center btn mt-s10 mx-auto">
-          Abandon Ship
-        </a>
-    </div>
+  <div class="max-w-[635px] mx-auto flex flex-col items-center">
+    <img src="{{ 'sinking-404.png' | asset_url }}" width="635" height="302" loading="lazy"/>
+    <p class="mt-s7 faux-p-lg text-center text-primary-800">
+      SOS! The page you are looking for no longer exists.
+    </p>
+    <a href="{{ routes.all_products_collection_url }}" class="text-center btn btn--filled-inverse btn--sm mt-s10 mx-auto">
+      Abandon Ship
+    </a>
+  </div>
 </div>
