--- a/assets/main.css
+++ b/assets/main.css
@@ -62,3 +62,9 @@ modal-dialog[open] {
     visibility: visible;
     z-index: 20;
 }
+
+/* transitions */
+
+.three-pane-item a:hover {
+    background-color: rgba(0, 0, 0, 25%);
+}
