--- a/sections/featured-products.liquid
+++ b/sections/featured-products.liquid
@@ -1,59 +1,38 @@
 <div class="px-54 md:px-72">
-    <div class="py-s12 md:py-s13 max-w-content-lg mx-auto">
-        <h2 class="faux-h3 text-center text-primary-900">
-            {% assign customHeadingLength = section.settings.customHeading | size %}
-            {% if customHeadingLength > 0 %}
-                {{ section.settings.customHeading }}
-            {% else %}
-                {{ section.settings.collection.title }}
-            {% endif %}
-        </h2>
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-s8 lg:gap-s6 mt-s9 md:mt-s8">
-            {% assign products = section.settings.collection.products %}
-            {% for product in products limit: 4 %}
-                <div class="flex-1">
-                    <div>
-                        {{ product | image_url: width: 200 | image_tag: class: 'w-full aspect-[4/5] object-contain', loading: 'lazy' }}
-                    </div>
-                    <div class="mt-s6">
-                        <h3 class="faux-p-lg font-bold text-black-900">{{ product.title }}</h3>
-                        <p class="mt-s5 text-black-400 uppercase">Brand/Collection</p>
-                        <p class="mt-s5">${{ product.price | money_without_currency }}</p>
-                        <div class="h-s6 flex items-center gap-s1 mt-s3">
-                            <div class="product-variant--tile">
-                                <div class="dot bg-black-600"></div>
-                                <div class="disc"></div>
-                            </div>
-                            <div class="product-variant--tile">
-                                <div class="dot bg-black-600"></div>
-                                <div class="disc"></div>
-                            </div>
-                            <p class="faux-p-xs text-black-400">+5</p>
-                        </div>
-                    </div>
-                </div>
-            {% endfor %}
-        </div>
-
+  <div class="py-s12 md:py-s13 max-w-content-lg mx-auto">
+    <h2 class="faux-h3 text-center text-primary-900">
+      {% assign customHeadingLength = section.settings.customHeading | size %}
+      {% if customHeadingLength > 0 %}
+        {{ section.settings.customHeading }}
+      {% else %}
+        {{ section.settings.collection.title }}
+      {% endif %}
+    </h2>
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-s8 lg:gap-s6 mt-s9 md:mt-s8">
+      {% assign products = section.settings.collection.products %}
+      {% for product in products limit: 4 %}
+        {% render 'product-card', product: product %}
+      {% endfor %}
     </div>
+
+  </div>
 </div>
 
 {% schema %}
-    {
-        "name": "featured-products",
-        "settings": [
-            {
-                "type": "text",
-                "id": "customHeading",
-                "label": "Custom Heading",
-                "default": "Featured Products",
-                "info": "Override collection name as section heading"
-            },
-            {
-                "type": "collection",
-                "id": "collection",
-                "label": "Collection"
-            }
-        ]
-    }
+  {
+    "name": "featured-products",
+    "settings": [
+      {
+        "type": "text",
+        "id": "customHeading",
+        "label": "Custom Heading",
+        "default": "Featured Products",
+        "info": "Override collection name as section heading"
+      }, {
+        "type": "collection",
+        "id": "collection",
+        "label": "Collection"
+      }
+    ]
+  }
 {% endschema %}
