--- a/sections/home-hero.liquid
+++ b/sections/home-hero.liquid
@@ -1,34 +1,33 @@
 <img src="{{ 'header-family.png' | asset_url }}" class="w-full max-h-[800px] object-cover" style="height:calc(100vh - 148px);" width="1520" height="1014" loading="lazy"/>
 <div class="absolute top-0 left-0 right-0 flex items-center w-full h-full max-w-[1440px] mx-auto py-s8">
-    <div class="w-[720px] px-s14">
-        <h1>{{ section.settings.heading }}</h1>
-        <a class="inline-block btn btn--inverse mt-s10 capitalize tracking-0 ui-caps" href="/products"> {{ section.settings.buttonLabel }}</a>
-    </div>
+  <div class="w-[720px] px-s14">
+    <h1>{{ section.settings.heading }}</h1>
+    <a class="inline-block btn btn--dark mt-s10 capitalize tracking-0 ui-caps" href="/products">
+      {{ section.settings.buttonLabel }}</a>
+  </div>
 </div>
 
 
 {% schema %}
-{
-    "name":"Hero",
-    "class":"relative",
+  {
+    "name": "Hero",
+    "class": "relative",
     "settings": [
-        {
-            "type": "text",
-            "id": "heading",
-            "label": "Heading",
-            "default": "Life Happens Here"
-        },
-        {
-            "type": "text",
-            "id": "buttonLabel",
-            "label": "Button Label",
-            "default": "Shop Best Sellers"
-        },
-        {
-            "type": "url",
-            "id": "buttonUrl",
-            "label": "Button URL"
-        }
+      {
+        "type": "text",
+        "id": "heading",
+        "label": "Heading",
+        "default": "Life Happens Here"
+      }, {
+        "type": "text",
+        "id": "buttonLabel",
+        "label": "Button Label",
+        "default": "Shop Best Sellers"
+      }, {
+        "type": "url",
+        "id": "buttonUrl",
+        "label": "Button URL"
+      }
     ]
-}
+  }
 {% endschema %}
