--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -1,6 +1,7 @@
 <script src="{{ 'product-form.js' | asset_url }}" defer="defer"></script>
 <script src="{{ 'accordion.js' | asset_url }}" defer="defer"></script>
 {% assign currentVariant = product.selected_or_first_available_variant %}
+{%- assign variant_images = product.images | where: 'attached_to_variant?', true | map: 'src' -%}
 <section
   id="MainProduct-{{ section.id }}"
   class="w-full px-72 bg-black-50"
@@ -8,23 +9,26 @@
 >
     {% render 'breadcrumb' %}
     <div class="product flex items-start gap-s10 px-36 pb-s12 md:pb-s13 max-w-content-lg mx-auto">
-        <div class="images flex-1">
-            {% if featuredImage %}
+        <div id="images-{{ section.id }}" class="images flex-1 grid grid-cols-2 gap-s3">
+            {% if product.selected_or_first_available_variant.image %}
                 <img
                     id="Thumbnail-{{ section.id }}-0"
-                    src="{{ featured_media | image_url: width: 700 }}"
-                    alt="{{ featured_media.alt | escape }}"
+                    class="row-span-2 col-span-2 w-full"
+                    src="{{ product.selected_or_first_available_variant.image | image_url: width: 700 }}"
+                    alt="{{ product.selected_or_first_available_variant.image.alt | escape }}"
                     loading="lazy"
                 >
             {% endif %}
             {%- for media in product.media -%}
-                <img
-                id="Thumbnail-{{ section.id }}-{{ forloop.index }}"
-                src="{{ media | image_url: width: 700 }}"
-                alt="{{ media.alt | escape }}"
-                loading="lazy"
-                class="w-full"
-                >
+                {% unless variant_images contains media.src %}
+                    <img
+                    id="Thumbnail-{{ section.id }}-{{ forloop.index }}"
+                    src="{{ media | image_url: width: 700 }}"
+                    alt="{{ media.alt | escape }}"
+                    loading="lazy"
+                    class="row-span-1 col-span-1 w-full"
+                    >
+                {% endunless %}
             {% endfor %}
         </div>
         <div class="product-info w-[460px] sticky top-s10">
@@ -116,15 +120,18 @@
             </div>
             <div class="faq__accordion mt-s10">
                 <ul class="accordion-items list-none accordion">
-                    {% assign temp = "1,2,3,4" | split: "," %}
-                    {% for i in temp %}
-                        <li class="accordion__item accordion__item">
-                            <button aria-controls="accordionContent{{ forloop.index }}" id="accordionBtn{{ forloop.index }}" class="accordion__trigger ">
-                                <h2 class="accordion__heading faux-p-sm text-black-800">Technical Specifications</h2>
+                    {% for block in section.blocks %}
+                        <li class="accordion__item">
+                            <button aria-controls="navAccordionContent{{ forloop.index }}" id="navAccordionBtn{{ forloop.index }}" class="accordion__trigger ">
+                                <h2 class="accordion__heading faux-p-sm text-black-800">
+                                    {{ block.settings.heading }}
+                                </h2>
                                 {% render "12-down", class: "text-black-700 mx-s2", strokeWidth:"1" %}
                             </button>
-                            <div id="accordionContent{{ forloop.index }}" aria-labelledby="accordionBtn{{ forloop.index }}" class="accordion__content-wrapper content-dependant" >
-                                <p class="before:hidden after:hidden pb-s7">KardiaMobile® 6L with KardiaCare is compatible with most popular phones and tablets. To use your Kardia device, <b>you must download the Kardia app on a compatible device</b> running at least Apple iOS 10.3.3, or at least Android OS 6.0.</p>
+                            <div id="navAccordionContent{{ forloop.index }}" aria-labelledby="navAccordionBtn{{ forloop.index }}" class="accordion__content-wrapper content-dependant" >
+                                <p class="before:hidden after:hidden pb-s7 rich-text">
+                                    {{ block.settings.accordion_content }}
+                                </p>
                             </div>
                         </li>
                     {% endfor %}
@@ -149,7 +156,7 @@
   "settings": [
     {
         "type": "checkbox",
-        "id": "size-guide",
+        "id": "size_guide",
         "label": "Size Guide Link"
     }
   ],
@@ -159,9 +166,14 @@
         "type": "accordion-item",
         "settings": [
             {
-                "type": "richtext",
-                "id":"accordion-content",
-                "label": "Accordion Item Content"
+                "type": "text",
+                "id": "heading",
+                "label": "Heading"
+            },
+            {
+                "type": "page",
+                "id":"accordion_content",
+                "label": "Content"
             }
         ]
     }
